--- a/css/main.css
+++ b/css/main.css
@@ -118,4 +118,36 @@ li a:hover{
   color: rgb(226, 32, 226);
 }
 
+/*mit folgenden css-Anweisungen wechselt die Farbe in der Titel-div
+Quelle: https://1stwebdesigner.com/15-css-background-effects */
 
+.jumbotron {
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	-webkit-animation: gradient 15s ease infinite;
+	        animation: gradient 15s ease infinite;
+}
+
+@-webkit-keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
