--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,10 +9,7 @@
                 <%= entry.title %>
             </div>
             <div class="panel-body">
-                <%= entry.content %>
-            </div>
-            <div class="panel-body">
-                <%= entry.testo %>
+                <%= entry.feedbackNachricht %>
             </div>
         </div>
     <% }) %>
