--- a/views/header.ejs
+++ b/views/header.ejs
@@ -17,10 +17,20 @@
         <link href="/public/css/main.css" rel="stylesheet" type="text/css">
         
     </head>
-    <body class="container">
-        <h1>
+    <body> <!--class="Container-->
+        <img src="/public/css/CallyBG2.jpeg" class="bg">
+        <div id="divtext">
+        <h1 id="feedbackTitle">Gästebuch
+            <a href="/neu" class="btn btn-primary float-right" style="font-family: Arial, Helvetica, sans-serif;">
+                Neuer Eintrag
+            </a>
+        </h1>
+           
+        
+
+    <!--  class="font-weight-bold feedbackTitle"  <h1>
             Gästebuch
             <a href="/neu" class="btn btn-primary pull-right">
                 Schreiben Sie ins Gästebuch
             </a>
-        </h1>
+        </h1-->
