Problem mit hängender Reaktion beim Senden gelöst

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -19,7 +19,7 @@
     </head>
     <body> <!--class="Container-->
         <img src="/public/css/CallyBG2.jpeg" class="bg">
-        <div id="divtext">
+        <div id="divtext" class ="rgba-yellow-light">
         <h1 id="feedbackTitle">Gästebuch
             <a href="/neu" class="btn btn-primary float-right" style="font-family: Arial, Helvetica, sans-serif;">
                 Neuer Eintrag
